<resources>
    <string name="app_name">Omega Report</string>
    <string name="main_congrats">Congratulations ! \nSubmit your team name !</string>
    <string name="main_submit">Submit</string>
    <string name="mission_success">Mission complete!</string>
    <string name="timer">00:21</string>
    <string name="team">Team :</string>
    <string name="timer_hint">Remaining time</string>
    <string name="error_no_name">No team name</string>
    <string name="error_no_time">Please enter the remaining time</string>
    <string name="english">English</string>
    <string name="polo">Polonium Operation</string>
    <string name="ali">Ali\'s Hideout</string>
    <string name="bombay">Bombay</string>
    <string name="paris">Paris</string>
    <string name="saoPaulo">Sao Paulo</string>
    <string name="pekin">Beijing</string>
</resources>